fix
update scrollbar for store : earlier it was looking to light on store as on store overflow: overlay is being used

fixed toolbar getting smaller in some apps

fix calculator resizing

Updated widget width to 760px (just like real win11 earler it was looked lil small especially on larger displays :)

--- a/src/components/start/sidepane.scss
+++ b/src/components/start/sidepane.scss
@@ -196,7 +196,7 @@ body[data-theme="dark"] .sidePane {
   top: 12px;
   left: 12px;
   bottom: 12px;
-  width: 610px;
+  width: 760px;
   border-radius: 8px;
   overflow: hidden;
   transform: translateX(0);
